# patchworks

./: .gitignore  .markdownlint-cli2.yaml  404.html  README.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  lint.yml  release.yml
api/chunks/: index.html
api/cluster/: index.html
api/io/: index.html
api/merge_tile_labels/: index.html
api/plugins/cellpose/: index.html
api/plugins/dog/: index.html
api/plugins/napari/: index.html
api/plugins/ome_zarr/: index.html
api/postprocess/: index.html
api/relabel/: index.html
api/tile_process/: index.html
docs/: getting_started.md  index.md
docs/api/: postprocess.md
docs/api/plugins/: dog.md  napari.md  ome_zarr.md
docs/examples/: cellpose_2d.md  cellpose_2d.py  cellpose_3d.md  cellpose_3d.py  custom.md  custom_method.py  dog.md  standalone_merge.md  stardist.md
docs/guide/: custom_segmentation.md  gpu_distributed.md  label_relations.md  measurements.md  merging.md  ome_zarr_napari.md  performance.md  pitfalls.md  skip_empty.md  snakemake.md  tiling.md
examples/: cellpose_3d.py  dog.py  stardist_2d.py
examples/cellpose_2d/: index.html
examples/cellpose_3d/: index.html
examples/custom/: index.html
examples/dog/: index.html
examples/standalone_merge/: index.html
examples/stardist/: index.html
getting_started/: index.html
guide/custom_segmentation/: index.html
guide/gpu_distributed/: index.html
guide/label_relations/: index.html
guide/measurements/: index.html
guide/merging/: index.html
guide/ome_zarr_napari/: index.html
guide/performance/: index.html
guide/pitfalls/: index.html
guide/skip_empty/: index.html
guide/snakemake/: index.html
guide/tiling/: index.html
search/: search_index.json
src/blockbuster/: __init__.py  _chunks.py  _cluster.py  _core.py  _io.py  _merge.py  _relabel.py
src/blockbuster/plugins/: __init__.py  cellpose.py
src/patchworks/: __init__.py  _chunks.py  _cluster.py  _core.py  _distributed.py  _io.py  _merge.py  _postprocess.py  _relabel.py  _relations.py
src/patchworks/plugins/: cellpose.py  dog.py  napari.py  ome_zarr.py
tests/: test_core.py  test_distributed.py  test_dog.py  test_napari.py  test_ome_zarr.py  test_postprocess.py  test_relations.py
workflow/: README.md  pixi.toml
workflow/.snakemake/iocache/: latest.pkl
workflow/.snakemake/metadata/: L3RtcC9wd193Zi9vdXQvbGFiZWxzLmRvbmU=  L3RtcC9wd193Zi9vdXQvc2VnLzAuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc2VnLzEuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc2VnLzIuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc2VnLzMuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc2VnLzQuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc2VnLzUuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc2VnLzYuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc2VnLzcuZG9uZQ==  L3RtcC9wd193Zi9vdXQvc3RhZ2UuemFycg==  L3RtcC9wd193Zi9vdXQvdGlsZXMuanNvbg==
workflow/config/: config.yaml  config_cilia.yaml  config_cyto.yaml  config_nuclei.yaml  multi.yaml
workflow/profile/slurm/: config.yaml
workflow/rules/: common.smk  convert.smk  merge.smk  segment.smk
workflow/scripts/: _pw.py  convert.py  merge.py  prepare_tiles.py  run_multi.py  segment_tile.py
