[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "patchworks"
dynamic = ["version"]
description = "Tiled processing of arbitrarily large images with globally consistent labels"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "IMCF Basel" }]
keywords = [
    "image processing",
    "tiling",
    "chunked",
    "zarr",
    "dask",
    "segmentation",
    "bioimage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

requires-python = ">=3.9"
dependencies = [
    "dask[array]>=2023.1.0",
    "numpy>=1.24",
    "zarr>=2.14",
    "scipy>=1.9",
]

[project.optional-dependencies]
io = ["psutil", "tqdm"]
cellpose = ["cellpose>=3.0"]
gpu = ["nvidia-ml-py"]
# bioio enables converting any image format (CZI, LIF, ND2, OME-TIFF, …) to
# OME-ZARR. Ships the common native readers (faster than going through Java)
# plus bioio-bioformats, the Bio-Formats catch-all reader (needs a JVM).
bioio = [
    "bioio",
    "bioio-bioformats",
    "bioio-nd2",
    "bioio-ome-tiff",
    "bioio-czi",
    "bioio-tifffile",
    "bioio-lif",
]
# napari enables the interactive viewer plugin (GUI-heavy, kept out of [all]).
napari = ["napari[all]"]
dev = ["pytest", "pytest-cov", "scikit-image", "psutil", "tqdm"]
docs = ["mkdocs-material>=9.0", "mkdocstrings[python]>=0.24"]
all = ["patchworks[io,gpu,bioio]", "psutil", "tqdm", "scikit-image"]

[project.urls]
Homepage = "https://github.com/imcf/patchworks"
Issues = "https://github.com/imcf/patchworks/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/patchworks"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
