[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "patchworks"
dynamic = ["version"]
description = "Tiled processing of arbitrarily large images with globally consistent labels"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "IMCF Basel" }]
keywords = [
    "image processing",
    "tiling",
    "chunked",
    "zarr",
    "dask",
    "segmentation",
    "bioimage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

requires-python = ">=3.9"
dependencies = [
    "dask[array]>=2023.1.0",
    "numpy>=1.24",
    "zarr>=2.14",
    "scipy>=1.9",
]

[project.optional-dependencies]
io = ["psutil", "tqdm"]
cellpose = ["cellpose>=3.0"]
gpu = ["nvidia-ml-py"]
# bioio enables converting any image format (CZI, LIF, ND2, OME-TIFF, …) to
# OME-ZARR. Ships the common native readers (faster than going through Java)
# plus bioio-bioformats, the Bio-Formats catch-all reader (needs a JVM).
bioio = [
    "bioio",
    "bioio-bioformats",
    "bioio-nd2",
    "bioio-ome-tiff",
    "bioio-czi",
    "bioio-tifffile",
    "bioio-lif",
]
# imaris reads .ims files natively (HDF5, no JVM) for OME-ZARR conversion.
imaris = ["imaris-ims-file-reader"]
# napari enables the interactive viewer plugin.
# - napari >= 0.5: NumPy 2.0 compatible (older 0.4.x uses np.array(copy=False),
#   which raises under NumPy 2 -> ValidationError on Viewer()).
# - numpy < 2.5: napari/numba don't support numpy 2.5 yet.
# - ipykernel < 7: napari-console requires ipykernel < 7.
# - lxml-html-clean: napari's notebook_display imports lxml.html.clean, split
#   into a separate package in lxml >= 5.2 (else ImportError on Viewer()).
# - glasbey: distinct high-contrast label LUTs for view_in_napari.
napari = [
    "napari[all]>=0.5.5",
    "numpy<2.5",
    "ipykernel<7",
    "lxml-html-clean",
    "glasbey",
]
# workflow runs the Snakemake pipeline (per-tile SLURM jobs across GPUs).
workflow = ["snakemake>=8", "snakemake-executor-plugin-slurm"]
dev = ["pytest", "pytest-cov", "scikit-image", "psutil", "tqdm"]
docs = ["mkdocs-material>=9.0", "mkdocstrings[python]>=0.24"]
all = [
    "patchworks[io,gpu,bioio,imaris,napari]",
    "psutil",
    "tqdm",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/imcf/patchworks"
Issues = "https://github.com/imcf/patchworks/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/patchworks"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
